# unmatrix-openenv

./: .gitignore  Dockerfile  HACKATHON_GUIDE.md  README.md  RESEARCH.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.ps1
server/: app.py  environment.py  models.py  web_agent.py
server/data_gen/: architecture_generator.py  bug_generator.py  security_generator.py
server/graders/: grader1.py  grader2.py  grader3.py
server/static/: index.html
server/tasks/: task1_bug_hunt.py  task2_security_audit.py  task3_architecture_review.py
